# tedit

./: CONTRIBUTING.md  How Plugins Work.md  LICENSE  Makefile  README.md  error.txt  init.sh  install.sh  iris.build  meson.build  tedit  tedit.1  tedit.cpp  uninstall.sh  update.sh
include/: buffer.hpp  config.hpp  editor.hpp  fileio.hpp  filter.hpp  highlight.hpp  linereader.hpp  ls.hpp  luabridge.hpp  range.hpp  recover.hpp  search.hpp  terminal.hpp  theme.hpp  utils.hpp
mandoc/: tedit.1
plugins/: example.lua
scripts/: build.bat  build.ps1  init.sh  install.bat  install.ps1  install.sh  uninstall.bat  uninstall.ps1  uninstall.sh  update.sh
src/: Buffer.cs  Editor.cs  Helpers.cs  LineReader.cs  LuaBridge.cs  Program.cs  TEdit.csproj  Theme.cs  buffer.cpp  editor.cpp  file_io.cpp  fileio.cpp  filter.cpp  highlight.cpp  line_reader.cpp  linereader.cpp  listing.cpp  ls.cpp  lua_bridge.cpp  luabridge.cpp  main.cpp  platform.cpp  range.cpp  ranges.cpp  recover.cpp  search.cpp  tedit.cpp  terminal.cpp  text.cpp  theme.cpp  utils.cpp
themes/: example.lua
